# mjx_diffrax

./: .gitignore  README.md  pyproject.toml
examples/: example.py
mjx_diffrax/: __init__.py  config.py  integrate.py  integrate_diffrax.py  integrate_mjx.py  util.py
tests/: test_solvers.py
